feat: openapi doc adding responde body to documentation and refactoring update method of CustomerController
